--- a/g5Mindr/g5Mindr/ViewControllers/ReminderVC/MDRReminderViewController.storyboard
+++ b/g5Mindr/g5Mindr/ViewControllers/ReminderVC/MDRReminderViewController.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="hba-q6-AHk">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="hba-q6-AHk">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -27,22 +30,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="c1z-kB-dkX"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="c1z-kB-dkX">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WWe-kn-svy">
+                                <rect key="frame" x="0.0" y="220" width="375" height="447"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <segue destination="sv4-u5-kpX" kind="embed" identifier="reminder_detail_embed" id="tBd-yu-drK"/>
                                 </connections>
                             </containerView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TtG-qd-qHf" userLabel="View - Reminder Details">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="220"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nN1-f8-XT1" userLabel="Separator">
+                                        <rect key="frame" x="0.0" y="219" width="375" height="1"/>
                                         <color key="backgroundColor" red="0.54901960780000003" green="0.72156862749999995" blue="0.89411764709999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="6sC-jT-RAV"/>
                                         </constraints>
                                     </view>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YwW-ya-aoy" userLabel="Outer Ring">
+                                        <rect key="frame" x="147.5" y="20" width="80" height="80"/>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="80" id="fMx-0h-Pph"/>
@@ -50,35 +59,39 @@
                                         </constraints>
                                     </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Wos-O2-kHC" userLabel="Inner Ring">
+                                        <rect key="frame" x="154.5" y="27" width="66" height="66"/>
                                         <color key="backgroundColor" red="0.14117647059999999" green="0.20784313730000001" blue="0.2784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="66" id="JeU-9u-hKR"/>
                                             <constraint firstAttribute="width" constant="66" id="N2m-7o-khb"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="O" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iCQ-U5-qO8" userLabel="Label - Emoticon">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6dG-0e-5yd">
+                                        <rect key="frame" x="167" y="40" width="40" height="40"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="1e8-cg-mpF"/>
-                                            <constraint firstAttribute="width" constant="50" id="SZT-iN-MXk"/>
+                                            <constraint firstAttribute="height" constant="40" id="STC-Za-iZU"/>
+                                            <constraint firstAttribute="width" constant="40" id="okz-4D-aye"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SxZ-tL-Ove">
+                                        <rect key="frame" x="147.5" y="20" width="80" height="80"/>
                                         <connections>
                                             <action selector="didPressEmojiButton:" destination="hba-q6-AHk" eventType="touchUpInside" id="ArB-aV-vRv"/>
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="586-W0-aZf" userLabel="Label Container View">
+                                        <rect key="frame" x="0.0" y="122" width="375" height="98"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ds1-mt-Jo0">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="24.5"/>
                                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="ProximaNovaSoftW03-Bold" family="ProximaNovaSoftW03-Bold" pointSize="17"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4HR-u5-N2D">
+                                                <rect key="frame" x="0.0" y="24.5" width="375" height="73.5"/>
                                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="ProximaNovaSoftW03-Bold" family="ProximaNovaSoftW03-Bold" pointSize="17"/>
                                                 <color key="textColor" red="0.54901960780000003" green="0.72156862749999995" blue="0.89411764709999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -104,6 +117,7 @@
                                     <constraint firstAttribute="bottom" secondItem="nN1-f8-XT1" secondAttribute="bottom" id="4vL-if-PnD"/>
                                     <constraint firstAttribute="trailing" secondItem="586-W0-aZf" secondAttribute="trailing" id="9GR-iT-lKq"/>
                                     <constraint firstItem="Wos-O2-kHC" firstAttribute="centerX" secondItem="YwW-ya-aoy" secondAttribute="centerX" id="Elk-zs-BS1"/>
+                                    <constraint firstItem="Wos-O2-kHC" firstAttribute="centerX" secondItem="6dG-0e-5yd" secondAttribute="centerX" id="H3u-63-fOl"/>
                                     <constraint firstItem="SxZ-tL-Ove" firstAttribute="centerY" secondItem="YwW-ya-aoy" secondAttribute="centerY" id="HJa-Nx-2FK"/>
                                     <constraint firstItem="586-W0-aZf" firstAttribute="top" secondItem="YwW-ya-aoy" secondAttribute="bottom" constant="22" id="N0q-ZY-y9D"/>
                                     <constraint firstItem="YwW-ya-aoy" firstAttribute="centerX" secondItem="TtG-qd-qHf" secondAttribute="centerX" id="Oaa-Oa-dOb"/>
@@ -111,14 +125,13 @@
                                     <constraint firstItem="nN1-f8-XT1" firstAttribute="leading" secondItem="TtG-qd-qHf" secondAttribute="leading" id="S1s-PB-Hy4"/>
                                     <constraint firstItem="SxZ-tL-Ove" firstAttribute="height" secondItem="YwW-ya-aoy" secondAttribute="height" id="W7Z-vi-KeE"/>
                                     <constraint firstItem="586-W0-aZf" firstAttribute="leading" secondItem="TtG-qd-qHf" secondAttribute="leading" id="Wx5-FJ-lsL"/>
-                                    <constraint firstItem="iCQ-U5-qO8" firstAttribute="centerY" secondItem="Wos-O2-kHC" secondAttribute="centerY" id="XA3-nN-TNo"/>
                                     <constraint firstItem="YwW-ya-aoy" firstAttribute="top" secondItem="TtG-qd-qHf" secondAttribute="top" constant="20" id="YdZ-u6-pbq"/>
                                     <constraint firstItem="SxZ-tL-Ove" firstAttribute="centerX" secondItem="YwW-ya-aoy" secondAttribute="centerX" id="cjz-Ux-Gcq"/>
                                     <constraint firstItem="Wos-O2-kHC" firstAttribute="centerY" secondItem="YwW-ya-aoy" secondAttribute="centerY" id="h7Q-db-sxR"/>
                                     <constraint firstAttribute="height" constant="220" id="i6F-WO-tbb"/>
+                                    <constraint firstItem="Wos-O2-kHC" firstAttribute="centerY" secondItem="6dG-0e-5yd" secondAttribute="centerY" id="qmK-na-omA"/>
                                     <constraint firstAttribute="trailing" secondItem="nN1-f8-XT1" secondAttribute="trailing" id="rHT-cu-iIA"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="160" id="wLa-Bx-FvA"/>
-                                    <constraint firstItem="iCQ-U5-qO8" firstAttribute="centerX" secondItem="Wos-O2-kHC" secondAttribute="centerX" id="wM3-Zd-XN6"/>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -149,7 +162,7 @@
                         </variation>
                     </view>
                     <connections>
-                        <outlet property="emoticonLabel" destination="iCQ-U5-qO8" id="auM-3a-UWQ"/>
+                        <outlet property="emojiImageView" destination="6dG-0e-5yd" id="kqR-EU-3V0"/>
                         <outlet property="explanationLabel" destination="4HR-u5-N2D" id="1ua-FB-qT8"/>
                         <outlet property="innerRingImageView" destination="Wos-O2-kHC" id="GCW-6r-cxH"/>
                         <outlet property="outerRingImageView" destination="YwW-ya-aoy" id="wdW-Pc-Gft"/>
@@ -174,16 +187,18 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="DoE-kc-mwj" id="Vdt-cb-s6e">
-                                    <frame key="frameInset" width="375" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G7j-sf-PfC">
+                                            <rect key="frame" x="0.0" y="49" width="375" height="1"/>
                                             <color key="backgroundColor" red="0.54901960780000003" green="0.72156862749999995" blue="0.89411764709999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="1" id="VfP-63-9DM"/>
                                             </constraints>
                                         </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fFc-Oy-HIe">
+                                            <rect key="frame" x="20" y="16" width="157" height="18"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="18" id="MjN-ea-7V8"/>
                                                 <constraint firstAttribute="width" constant="42" id="mkJ-WQ-Kzd"/>
@@ -198,6 +213,7 @@
                                             </variation>
                                         </label>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron_right" translatesAutoresizingMaskIntoConstraints="NO" id="kN1-MC-yOb">
+                                            <rect key="frame" x="348" y="18" width="7" height="14"/>
                                             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="7" id="Cfk-wp-bE9"/>
@@ -205,6 +221,7 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uyH-rJ-5fO">
+                                            <rect key="frame" x="177" y="16" width="157" height="18"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="42" id="gev-dn-Ee5"/>
                                                 <constraint firstAttribute="height" constant="18" id="kD2-zb-Dfz"/>
